hibernate: lombok incompatible with @Entity